moving js files

--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link rel="author" href="/humans.txt">
 	<script type="text/javascript" src="lib/coffee-script.js"></script>
-	<script type="text/javascript" src="lib/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="lib/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="lib/dat.gui.min.js"></script>
+  <script type="text/javascript" src="lib/purl.js"></script>
 	<script type="text/coffeescript" src="periscope.coffee"></script>
 </head>
 <body>
 	<div id="main"></div>
 </body>
 
-<script src="js/externals/jquery-1.11.0.min.js"></script>
-<script src="js/externals/purl.js"></script>
 <script type="text/coffeescript" src="appconfig.coffee"></script>
 <script type="text/coffeescript">
   
