--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav" id="nav-bar"></ul>
-      <form class="navbar-form navbar-right" role="search">
+      <form style="display:none" class="navbar-form navbar-right" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="http://mobile.nytimes.com">
         </div>
