--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="lib/dat.gui.min.js"></script>
   <script type="text/javascript" src="lib/purl.js"></script>
 	<script type="text/coffeescript" src="periscope.coffee"></script>
+  <title>Periscope</title>
 </head>
 <body>
   <nav class="navbar navbar-default" role="navigation">
