--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset='UTF-8'>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -36,12 +36,26 @@
         <div class="form-group">
           <input type="text" class="form-control" id="deeplink" placeholder="http://mobile.nytimes.com">
         </div>
-        <button type="submit" class="btn btn-default" id="linksubmit">Submit</button>
+         <button type="submit" class="btn btn-default" id="linksubmit">Submit</button>
+         <button id="linkcompare" class="btn btn-primary" data-toggle="modal" data-target="#compareModal">Compare</button>
       </form>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 	<div id="main"></div>
+	<div class="modal fade" id="compareModal" tabindex="-1" role="dialog" aria-labelledby="compareModalLabel" aria-hidden="true">
+		  <div class="modal-dialog">
+		    <div class="modal-content">
+					<div class="modal-body">
+		<form class="" role="compare">
+			<label>Link 1<input type="text" class="form-control" id="comparelink1" placeholder="http://mobile.nytimes.com"></label>
+			<label>Link 2<input type="text" class="form-control" id="comparelink2" placeholder="http://mobile.stg.nytimes.com"></label>
+			<button type="submit" class="btn btn-default" id="comparesubmit">Submit</button>
+		</form>
+	</div>
+	</div>
+  </div>
+  </div>
 </body>
 
 <script type="text/coffeescript" src="appconfig.coffee"></script>
