--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img src="img/logo.gif"></a>
+      <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
